test/corpus/extras.txt
================================================================================
Comments
================================================================================

*** Settings ***    # Can I comment here?

Documentation       I am just text, # not a comment   # But I am a comment
...                 # I am also a comment           I should still be the comment

# Hello, it's a comment!

--------------------------------------------------------------------------------

(source_file
  (section
    (settings_section
      (section_header)
      (comment)
      (setting_statement
        (arguments
          (argument
            (text))
          (comment)
          (continuation
            (ellipses)
            (comment))))
      (comment))))

================================================================================
Test tab and space separator mix
================================================================================

*** Settings ***

Documentation	 		   hi

--------------------------------------------------------------------------------

(source_file
  (section
    (settings_section
      (section_header)
      (setting_statement
        (arguments
          (argument
            (text)))))))

================================================================================
Test extra data and comment after section header
================================================================================

*** Test Cases ***  Extra data    # Comment

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (extra_text)
      (extra_text)
      (comment))))

================================================================================
Arguments can start with curly braces
================================================================================

***Tasks***
This is a task
    [Documentation]    {abc

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (test_case_or_task_setting
            (arguments
              (argument
                (text)))))))))

================================================================================
Spaced out tasks and keywords
================================================================================

*** Tasks ***


Spaced out task

  Spaced Out Keyword



*** Keywords ***


 Spaced Out Keyword


  Log To Console
  ...  Many Newlines

Ok
  Log To Console    yep

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)))))))
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text)))))))
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text))))))))))

================================================================================
Test several different arguments
================================================================================

*** Test Cases ***
Test printing
  Log To Console    $a
  ...  ${b}
  ...  c
  ...  ${d} e

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text))
                (continuation
                  (ellipses)
                  (argument
                    (variable
                      (scalar_variable
                        (variable_name)))))
                (continuation
                  (ellipses)
                  (argument
                    (text)))
                (continuation
                  (ellipses)
                  (argument
                    (variable
                      (scalar_variable
                        (variable_name)))
                    (text)))))))))))

================================================================================
Test Singular Section Names
================================================================================

*** Setting ***
Documentation      Here we have documentation for this suite.\nDocumentation is often quite long.\n\nIt can also contain multiple paragraphs.
Default Tags       default tag 1    default tag 2    default tag 3    default tag 4    default tag 5

*** Variable ***
${STRING}          This is a long string. It has multiple sentences. It does not have newlines.
${MULTILINE}       This is a long multiline string.\nThis is the second line.\nThis is the third and the last line.

*** Task ***
Example
    [Tags]    you    probably    do    not    have    this    many    tags    in    real    life
    Log To Console    ${STRING}

--------------------------------------------------------------------------------

(source_file
  (section
    (settings_section
      (section_header)
      (setting_statement
        (arguments
          (argument
            (text))))
      (setting_statement
        (arguments
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))))))
  (section
    (variables_section
      (section_header)
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))))))
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (test_case_or_task_setting
            (arguments
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))
              (argument
                (text))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (variable
                    (scalar_variable
                      (variable_name))))))))))))
