test/corpus/keyword-definitions.txt
================================================================================
Simple keyword definitions
================================================================================

*** Keywords ***

I Am A User Defined Keyword
    Foo Bar
    Do Something    foo=bar
    ...             Another argument
    Do More Stuff   pow=123

    Empty Lines Should Be Allowed

I Am Another User Defined Keyword

    Do Something Cool     with=123
    ...                   and=234

    Expect Everything To Work

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk))
                (continuation
                  (ellipses)
                  (argument
                    (text_chunk))))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk)))))
          (statement
            (keyword_invocation
              (keyword)))))
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk))
                (continuation
                  (ellipses)
                  (argument
                    (text_chunk))))))
          (statement
            (keyword_invocation
              (keyword))))))))

================================================================================
Keyword settings
================================================================================

*** Keywords ***

I Am A User Defined Keyword
    [Documentation]   I am keyword documentation
    ...
    ...               I often span multiple lines
    [Tags]            foo   bar
    [Arguments]       ${First argument}   ${Second argument}    ${Default}=value
    [Return]          ${Return value}
    [Teardown]        I Am A Teardown Keyword     With    Arguments
    [Timeout]         1 minute

    Log To Console    Test!

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (keyword_setting
            (arguments
              (argument
                (text_chunk))
              (continuation
                (ellipses))
              (continuation
                (ellipses)
                (argument
                  (text_chunk)))))
          (keyword_setting
            (arguments
              (argument
                (text_chunk))
              (argument
                (text_chunk))))
          (keyword_setting
            (arguments
              (argument
                (scalar_variable
                  (variable_name)))
              (argument
                (scalar_variable
                  (variable_name)))
              (argument
                (scalar_variable
                  (variable_name))
                (text_chunk))))
          (keyword_setting
            (arguments
              (argument
                (scalar_variable
                  (variable_name)))))
          (keyword_setting
            (arguments
              (argument
                (text_chunk))
              (argument
                (text_chunk))
              (argument
                (text_chunk))))
          (keyword_setting
            (arguments
              (argument
                (text_chunk))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk))))))))))

================================================================================
Simple Keyword with embedded argument
================================================================================

*** Variables ***
${今日は}  Hello
${world}  世界
*** Test Cases ***
Test printing
  Print hello to console
  Print ${今日は} ${world} to console
*** Keywords ***
Print ${ msg} to console
  Log To Console    ${msg}

--------------------------------------------------------------------------------

(source_file
  (section
    (variables_section
      (section_header)
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text_chunk))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text_chunk))))))
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword
                (scalar_variable
                  (variable_name))
                (scalar_variable
                  (variable_name)))))))))
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name
          (scalar_variable
            (variable_name)))
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (scalar_variable
                    (variable_name)))))))))))
