test/corpus/statements.txt
================================================================================
Basic keyword invocations
================================================================================

*** Keywords ***

Test Keyword
  I Am A Simple Statement

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword))))))))

================================================================================
Keyword invocations with arguments
================================================================================

*** Keywords ***

Test Keyword
  I Am A Simple Statement     First argument    Second argument

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text))
                (argument
                  (text))))))))))

================================================================================
Keyword invocations with line continuations
================================================================================

*** Keywords ***

Test Keyword
  I Am A Simple Statement     First argument    Second argument
  ...                         Third argument    Fourth argument
  ...                         And so on

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text))
                (argument
                  (text))
                (continuation
                  (ellipses)
                  (argument
                    (text))
                  (argument
                    (text)))
                (continuation
                  (ellipses)
                  (argument
                    (text)))))))))))

================================================================================
Scalar variables, list variables, dictionary variables
================================================================================

*** Keywords ***

Test Keyword
  Simple Statement    ${SOME_VARIABLE}    @{LIST_VARIABLE}    &{DICT_VARIABLE}

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (scalar_variable
                    (variable_name)))
                (argument
                  (list_variable
                    (variable_name)))
                (argument
                  (dictionary_variable
                    (variable_name)))))))))))

================================================================================
Scalar variable interpolation
================================================================================

*** Keywords ***

Test Keyword
  Simple Statement    ${SOME_VARIABLE}

  Simple Statement    Interpolation ${a} b ${c} ${1}

  Simple Statement    no${VARIABLE}space

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (scalar_variable
                    (variable_name))))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text
                    (scalar_variable
                      (variable_name))
                    (scalar_variable
                      (variable_name))
                    (scalar_variable
                      (variable_name)))))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text
                    (scalar_variable
                      (variable_name))))))))))))

================================================================================
Simple variable assignment
================================================================================

*** Keywords ***

Test Keyword
  ${My Variable}        Some Keyword    Some Argument   ${Foo}
  ${Second Variable} =  The Equals Symbol Is Optional

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (statement
            (variable_assignment
              (variable_name)
              (arguments
                (argument
                  (text))
                (argument
                  (text))
                (argument
                  (scalar_variable
                    (variable_name))))))
          (statement
            (variable_assignment
              (variable_name)
              (arguments
                (argument
                  (text))))))))))

================================================================================
Simple RETURN statements
================================================================================

*** Test Cases ***
Test printing
  Print    Hello
  Print And Return
  ...   Hello


*** Keywords ***
Print
  [Arguments]  ${msg}
  Log To Console    ${msg}
  RETURN
  Log To Console    This won't be logged

Print And Return
  [Arguments]  ${msg}
  Log To Console    ${msg}
  RETURN  "${msg}"
  Log To Console    This won't be logged

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text)))))
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text)))))))))
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (keyword_setting
            (arguments
              (argument
                (scalar_variable
                  (variable_name)))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (scalar_variable
                    (variable_name))))))
          (statement
            (return_statement))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text)))))))
      (keyword_definition
        (name)
        (body
          (keyword_setting
            (arguments
              (argument
                (scalar_variable
                  (variable_name)))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (scalar_variable
                    (variable_name))))))
          (statement
            (return_statement
              (arguments
                (argument
                  (text
                    (scalar_variable
                      (variable_name)))))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text))))))))))
