test/corpus/test_cases_or_tasks_section.txt
================================================================================
Simple test cases
================================================================================

*** Test cases ***

Test That Something Works
    Do Something
    Then Do Something Else

    Expect Result To Be     foo

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk))))))))))

================================================================================
Simple tasks
================================================================================

*** Tasks ***

Hello
    Log    今日は

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk))))))))))

================================================================================
Data driven style test cases
================================================================================

*** Test Cases ***                USERNAME         PASSWORD
Invalid User Name                 invalid          ${VALID PASSWORD}
Invalid Password                  ${VALID USER}    invalid
Invalid User Name and Password    invalid          invalid
Empty User Name                   ${EMPTY}         ${VALID PASSWORD}
Empty Password                    ${VALID USER}    ${EMPTY}
Empty User Name and Password      ${EMPTY}         ${EMPTY}

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (extra_text)
      (extra_text)
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (text_chunk))
          (argument
            (scalar_variable
              (variable_name)))))
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (scalar_variable
              (variable_name)))
          (argument
            (text_chunk))))
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (text_chunk))
          (argument
            (text_chunk))))
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (scalar_variable
              (variable_name)))
          (argument
            (scalar_variable
              (variable_name)))))
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (scalar_variable
              (variable_name)))
          (argument
            (scalar_variable
              (variable_name)))))
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (scalar_variable
              (variable_name)))
          (argument
            (scalar_variable
              (variable_name))))))))

================================================================================
Test case options
================================================================================

*** Test cases ***

Test That Something Works
    [Documentation]   I am keyword documentation
    ...
    ...               I often span multiple lines
    [Tags]            foo   bar
    [Setup]           I Am A Setup Keyword    with=arguments
    [Teardown]        I Am A Teardown Keyword     With    Arguments
    [Template]        I Am A Template Keyword
    [Timeout]         1 minute

    Expect Result To Be     foo

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (test_case_or_task_setting
            (arguments
              (argument
                (text_chunk))
              (continuation
                (ellipses))
              (continuation
                (ellipses)
                (argument
                  (text_chunk)))))
          (test_case_or_task_setting
            (arguments
              (argument
                (text_chunk))
              (argument
                (text_chunk))))
          (test_case_or_task_setting
            (arguments
              (argument
                (text_chunk))
              (argument
                (text_chunk))))
          (test_case_or_task_setting
            (arguments
              (argument
                (text_chunk))
              (argument
                (text_chunk))
              (argument
                (text_chunk))))
          (test_case_or_task_setting
            (arguments
              (argument
                (text_chunk))))
          (test_case_or_task_setting
            (arguments
              (argument
                (text_chunk))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk))))))))))

================================================================================
Simple test case with spaces
================================================================================

*** Test cases ***

 Test That Something Works 
    Do Something
    Then Do Something Else

    Expect Result To Be     foo

--------------------------------------------------------------------------------

(source_file
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword)))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk))))))))))

================================================================================
Test Templates with arguments on the same line
================================================================================

*** Settings ***
Test Template    Example keyword

*** Keywords ***
Example Keyword
  [Arguments]  ${name}
  Log To Console    hi ${name}

*** Test Cases ***
Greet a guy  alex
Greet a girl  eve

--------------------------------------------------------------------------------

(source_file
  (section
    (settings_section
      (section_header)
      (setting_statement
        (arguments
          (argument
            (text_chunk))))))
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name)
        (body
          (keyword_setting
            (arguments
              (argument
                (scalar_variable
                  (variable_name)))))
          (statement
            (keyword_invocation
              (keyword)
              (arguments
                (argument
                  (text_chunk)
                  (scalar_variable
                    (variable_name))))))))))
  (section
    (test_cases_or_tasks_section
      (section_header)
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (text_chunk))))
      (test_case_or_task_definition
        (name)
        (arguments
          (argument
            (text_chunk)))))))
