test/corpus/variables-section.txt
================================================================================
Empty variables section
================================================================================

*** Variables ***

--------------------------------------------------------------------------------

(source_file
  (section
    (variables_section
      (section_header))))

================================================================================
Simple variable definitions
================================================================================

*** Variables ***

${FOO} =                    I am a string!    I am another string!
${name-with-dashes} =       I am a string!    I am another string!
${Name with spaces} =       I am a string!    I am another string!
${Name / with $ symbols} =  I am a string!    I am another string!

--------------------------------------------------------------------------------

(source_file
  (section
    (variables_section
      (section_header)
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (argument
            (text))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (argument
            (text))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (argument
            (text))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (argument
            (text)))))))

================================================================================
Multi-line variable definitions
================================================================================

*** Variables ***

${FOO} =    I am a very long text string
...         that has to be split into
...         multiple lines
...
...         Empty continuation lines are fine and even indented continuation
   ...      lines should technically work. This is to support line
      ...   continuations inside user defined keywords, but unfortunately Robot
...         accepts them anywhere.

--------------------------------------------------------------------------------

(source_file
  (section
    (variables_section
      (section_header)
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (continuation
            (ellipses)
            (argument
              (text)))
          (continuation
            (ellipses)
            (argument
              (text)))
          (continuation
            (ellipses))
          (continuation
            (ellipses)
            (argument
              (text)))
          (continuation
            (ellipses)
            (argument
              (text)))
          (continuation
            (ellipses)
            (argument
              (text)))
          (continuation
            (ellipses)
            (argument
              (text))))))))

================================================================================
Several different variables
================================================================================

*** Variables ***
${first} =  This is a very interesting
...         line
@{second} =    And this is a
...         list with three  items
${STRING}          This is a long string. It has multiple sentences. It does not have newlines.
${MULTILINE}       This is a long multiline string.\nThis is the second line.\nThis is the third and the last line.
@{LIST}            this     list     is    quite    long     and    items in it can also be long
&{DICT}            first=This value is pretty long.    second=This value is even longer. It has two sentences.

--------------------------------------------------------------------------------

(source_file
  (section
    (variables_section
      (section_header)
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (continuation
            (ellipses)
            (argument
              (text)))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (continuation
            (ellipses)
            (argument
              (text))
            (argument
              (text)))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))
          (argument
            (text))))
      (variable_definition
        (variable_name)
        (arguments
          (argument
            (text))
          (argument
            (text)))))))
